# obspy

./: .coveragerc  .flake8  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .setup.py.kate-swp  .travis.yml  AV.ACH.--.EHE.mseed  CHANGELOG.md  CHANGELOG.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  Debian-packaging.md  Home.md  How-to:-add-a-new-submodule.md  IM.I31KZ_SC3_formatted.xml  Installation-on-FreeBSD.md  Installation-on-Linux-from-source.md  Installation-on-Linux-via-Apt-Repository.md  Installation-on-Linux-via-PyPI.md  Installation-on-Linux.md  Installation-on-Linux:-Dependencies.md  Installation-on-Mac-Using-Sage.md  Installation-on-Mac-from-Source.md  Installation-on-Mac-with-OSX-Application.md  Installation-on-Mac-with-OSX-Application:-Contents.md  Installation-on-Mac.md  Installation-on-Windows-Using-Prepackaged-Modules.md  Installation-on-Windows-from-Source.md  Installation-on-Windows-using-a-pre-build-package-(PyPI).md  Installation-on-Windows.md  Interesting-Reading-on-Git,-GitHub.md  Known-Python-Issues.md  LICENSE  LICENSE.txt  MANIFEST.in  ObsPy-Git-Branching-Model.md  ObsPy:-A-Python-Toolbox-for-seismology-seismological-observatories.md  (+22 more)
.circleci/: config.yml  file_size_check.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  docs_conda_env.yml  test_all_conda_env.yml  test_conda_env-3.10.yml  test_conda_env-3.8.yml  test_conda_env-3.9.yml  test_conda_env.yml  test_mindep_conda_env.yml  test_mindepversion_conda_env.yml  test_np2_conda_env.yml
debian/: _copy_lib_extensions_to_source_tree.sh  _dh_install_data_files.sh  _dh_link_data_files.sh  _rename_lib_extensions.sh  changelog.template  control  copyright  manpages  obspy-flinn-engdahl.1  obspy-indexer.1  obspy-plot.1  obspy-print.1  obspy-runtests.1  obspy-xseed2dataless.1  python-obspy-dbg.lintian-overrides  python3-obspy.lintian-overrides  rules  watch
debian.pybuild/: _dh_link_data_files.sh  control  obspy-mseed-recordanalyzer.1  python-obspy-dbg.lintian-overrides  python-obspy-dbg.manpages  python-obspy.manpages  python3-obspy-dbg.manpages  python3-obspy.manpages  rules
debian.python_distutils/: _dh_link_data_files.sh  control  manpages  rules
docs/: changes_in_python_from_java  modelname_etc  notes_on_TauP_Create  replacement_table  structure_TauP_Create
j2py_translated/: SlownessModel.py  SphericalSModel.py  TauP.py  TauP_Create.py  VelocityLayer.py  VelocityModel.py~
obspy/: pytest.ini  (+5 more)
obspy.arclink/: setup.py
obspy.core/: MANIFEST.in
obspy.datamark/: setup.py
obspy.gse2/: MANIFEST.in  setup.py
obspy.iris/: MANIFEST.in
obspy.mseed/: setup.py
obspy.realtime/: setup.py
obspy.seedlink/: setup.py
obspy.signal/obspy/signal/src/evalresp/: Makefile.am  error_fctns.c  regexp.h
trunk/obspy.signal/obspy/signal/src/evalresp-3.3.3/: README  calc_fctns.c  config.h.in  configure  configure.in  evalresp.c  evalresp.ide  evr_spline.c  evr_spline.h  evresp.h  evtest.f  makefile.bor  makefile.ms  print_fctns.c  regexp.c
(+4994 files in other folders)
